k8s-manifest/services.yml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  clusterIP: 10.100.0.2
  clusterIPs:
    - 10.100.0.2
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    # - IPv6
  ipFamilyPolicy: PreferDualStack
  type: NodePort
  selector:
    app: fleetman-queue
    tier: prod
  ports:
    # admin access port
    - name: admin-port
      port: 8161
      targetPort: admin-port
      nodePort: 30061
      protocol: TCP
    # Internal access port
    - name: internal-port
      port: 61616
      targetPort: queue-port
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
spec:
  clusterIP: 10.100.0.3
  clusterIPs:
    - 10.100.0.3
  # externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    # - IPv6
  ipFamilyPolicy: PreferDualStack
  type: ClusterIP
  selector:
    app: fleetman-tracker
    tier: prod
  ports:
    # Internal access port
    - name: internal-port
      port: 8080
      targetPort: tracker-port
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
spec:
  clusterIP: 10.100.0.4
  clusterIPs:
    - 10.100.0.4
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    # - IPv6
  ipFamilyPolicy: PreferDualStack  
  selector:
        app: fleetman-apigateway
        tier: prod    
  ports:
    - name: apigateway
      targetPort: apigateway-port
      port: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  # externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    # - IPv6
  ipFamilyPolicy: PreferDualStack     
  selector:
        app: web
        type: webapp
        tier: prod    
  ports:
    - name: web
      targetPort: 80
      port: 80
      nodePort: 30080
      protocol: TCP
  type: NodePort
